add alter table support